--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,22 @@
-<form action="" method="POST">
-    <input type="text">
-</form>
+<div class="form-wrapper">
+    <form action="/login" method="POST" class="form">
+        <h1 class="form__title">{{title}}</h1>
+
+        <div class="form_input-container">
+            <label for="username">Username:</label>
+            <input type="text" name="username" value={{user.username}}>
+        </div>
+        <div class="form_input-container">
+            <label for="password">Password:</label>
+            <input type="text" name="password">
+        </div>
+        <ul class="form__errors">
+            {{#if error}}
+            <li>{{error}}</li>
+            {{/if}}
+        </ul>
+
+        <button type="submit">Login!</button>
+
+    </form>
+</div>
