--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,258 @@
   justify-items: center;
 }
 
+.form-wrapper .form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 80vw;
+  max-width: 600px;
+}
+
+.form-wrapper .form > * {
+  margin: 10px;
+}
+
+.form-wrapper .form .form_input-container,
+.form-wrapper .form .form__input-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.form-wrapper .form .form_input-container input,
+.form-wrapper .form .form__input-container input {
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  margin-top: 0.3em;
+  padding: 0.5em 0.4em;
+  font-family: Montserrat, Roboto;
+}
+
+.form-wrapper .form button {
+  padding: 0.4em;
+  border-radius: 4px;
+  background-color: #c6b497;
+}
+
+.form-wrapper .form .form__errors {
+  color: #e65b5b;
+}
+
+.message-form-container {
+  padding: 2em 1em;
+  width: 100%;
+}
+
+.message-form-container .message-form {
+  background-color: white;
+  padding: 1em;
+  border-radius: 4px;
+  color: black;
+}
+
+.message-form-container .message-form .input-container {
+  margin: 1em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.message-form-container .message-form .input-container input,
+.message-form-container .message-form .input-container textarea {
+  margin-top: 0.5em;
+  padding: 0.5em;
+  font-family: Montserrat, Roboto;
+  resize: none;
+}
+
+.message-form-container .message-form .input-container:first-child {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.message-form-container .message-form .input-container:first-child input {
+  margin-left: 2em;
+}
+
+.message-form-container .message-form button[type='submit'] {
+  width: 100%;
+  background: #2c525b;
+  padding: 1em;
+  border-radius: 4px;
+}
+
+.content-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 100%;
+      grid-template-columns: 100%;
+  justify-items: center;
+  max-height: 78vh;
+  overflow-y: scroll;
+  margin-top: 25px;
+  -ms-overflow-style: none;
+  /* Internet Explorer 10+ */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.content-wrapper::-webkit-scrollbar {
+  display: none;
+  /* Safari and Chrome */
+}
+
+@media (min-width: 576px) {
+  .content-wrapper {
+    gap: clamp(10px, 5vw, 100px);
+  }
+}
+
+@media (min-width: 768px) {
+  .content-wrapper {
+    overflow-y: visible;
+    padding: 0;
+    -ms-grid-columns: 60% auto;
+        grid-template-columns: 60% auto;
+  }
+}
+
+@media (min-width: 992px) {
+  .content-wrapper {
+    padding: 50px;
+  }
+}
+
+.content-wrapper .messages-container {
+  height: 78vh;
+  width: 100%;
+  padding: 2em 1em;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 100%;
+      grid-template-columns: 100%;
+  gap: 20px;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  /* Internet Explorer 10+ */
+  scrollbar-width: none;
+  /* Firefox */
+  border-radius: 4px;
+}
+
+.content-wrapper .messages-container::-webkit-scrollbar {
+  display: none;
+  /* Safari and Chrome */
+}
+
+@media (min-width: 768px) {
+  .content-wrapper .messages-container {
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+  .content-wrapper .messages-container::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
+  }
+}
+
+.content-wrapper .messages-container .message {
+  padding: 1em 0 0.5em 2em;
+  border-radius: 4px;
+  background-color: white;
+  color: black;
+}
+
+.content-wrapper .messages-container .message .message__body {
+  padding: 2em 1em 2em 0;
+  overflow-wrap: break-word;
+}
+
+.content-wrapper .messages-container .message .message__info {
+  padding-right: 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 0.8em;
+  color: #b3b3b3;
+}
+
+.content-wrapper .messages-container .message .message__info .isAuthor {
+  color: green;
+}
+
+.content-wrapper .message-form-container {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .content-wrapper .message-form-container {
+    display: block;
+  }
+}
+
+.message-form-container.modal {
+  display: none;
+  position: fixed;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  z-index: 2;
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+.message-form-container.modal .message-form {
+  width: 70%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+#show-message-form {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  margin-top: 1em;
+  padding: 1em;
+  width: 80%;
+  border-radius: 4px;
+  background-color: #2c525b;
+}
+
+@media (min-width: 768px) {
+  #show-message-form {
+    display: none;
+  }
+}
+
 html,
 body {
   height: 100%;
@@ -17,6 +269,10 @@ body {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+button {
+  cursor: pointer;
 }
 
 a {
@@ -36,8 +292,8 @@ a {
 
 #bg {
   background-color: #34626c;
-  -webkit-clip-path: polygon(0 0, 0, 100% 100%, 0% 100%);
-          clip-path: polygon(0 0, 0, 100% 100%, 0% 100%);
+  -webkit-clip-path: polygon(0 0, 45% 0, 100% 100%, 0% 100%);
+          clip-path: polygon(0 0, 45% 0, 100% 100%, 0% 100%);
   z-index: -1;
 }
 
@@ -95,6 +351,7 @@ button {
 }
 
 .navbar ul {
+  width: 100%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 50% auto;
@@ -127,15 +384,85 @@ button {
           align-items: center;
 }
 
+@media (min-width: 576px) {
+  .navbar ul .nav-links {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+}
+
 @media (min-width: 768px) {
   .navbar ul .nav-links {
     padding-left: 2em;
   }
 }
 
-.navbar ul .nav-links a {
+.navbar ul .nav-links li {
+  position: relative;
+  margin: 0 1em;
+}
+
+.navbar ul .nav-links li a {
+  white-space: nowrap;
   color: #34626c;
   cursor: pointer;
-  margin: 0 1em;
+}
+
+@media (min-width: 576px) {
+  .navbar ul .nav-links li a {
+    margin: 0 1em;
+  }
+}
+
+.navbar ul .nav-links.welcome {
+  width: 70%;
+  justify-self: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  white-space: nowrap;
+}
+
+.navbar ul .nav-links.welcome li {
+  margin: 0;
+}
+
+.navbar ul .nav-links.welcome li #user {
+  color: #34626c;
+}
+
+.navbar ul .nav-links.welcome li #log-out {
+  position: absolute;
+  top: 2em;
+  right: 1em;
+  display: none;
+  height: 0;
+  opacity: 0;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+
+.navbar ul .nav-links.welcome li #log-out.show {
+  display: block;
+  height: auto;
+  opacity: 1;
+}
+
+@media (min-width: 576px) {
+  .navbar ul .nav-links.welcome {
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin: 0 1em;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar ul .nav-links.welcome {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
