--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,22 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/chat-bubble.png">
     <link rel="stylesheet" href="stylesheets/style.css">
-    <title>Document</title>
+    <title>Chatty</title>
 </head>
 
 <body>
+    {{#if user}}
+    <section class="message-form-container modal">
+
+        <form action="/new-message" method="POST" class="message-form">
+            <h2>Create A Message!</h2>
+            <div class="input-container">
+                <label for="title">Title: </label>
+                <input type="text" name="title">
+            </div>
+            <div class="input-container">
+                <label for="text"> Message:</label>
+                <textarea name="text" id="" cols="30" rows="10" placeholder="Write here!"> </textarea>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+    {{/if}}
     <header class="navbar">
         <ul>
             <li>
                 <a href="/"><span id="logo">Chatty</span></a>
             </li>
             {{#if user}}
-            <div class="nav-links">
+            <div class="nav-links welcome">
                 <li>
-                    <a href="/" class="nav-links__link">
-                        Welcome, {{user.username}}
-                    </a>
+                    <span class="nav-links__link">
+                        <a id="user">Welcome, {{user.username}}</a>
+                        <a href="/logout" id="log-out">Log Out</a>
+                    </span>
                 </li>
 
             </div>
@@ -43,6 +62,7 @@
     <div id="bg"></div>
     <div id="bg2"></div>
     {{{body}}}
+    <script src="javascripts/script.js"></script>
 </body>
 
 </html>
